--- a/gb/21/1/5/n12668307.md
+++ b/gb/21/1/5/n12668307.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ytrikp332/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ytrikp332/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ytrikp332/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ytrikp332/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>违章工厂断水断电承诺跳票 立委、官员激辩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/477982-600x400.jpg" />
 <h6>时代力量立委陈椒华（中）与环保团体5日举行记者会，再度质疑，经济部长王美花承诺109年底对农地违章工厂断水断电要达200家，但这确定跳票，明显有行政怠惰。（中央社）
 </h6>
 <hr>
-<p>【大纪元2021年01月05日讯】（大纪元记者徐翠玲台湾台北报导）针对立委<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>与环团5日指出，<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长王美花承诺<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E8%BF%9D%E7%AB%A0%E5%B7%A5%E5%8E%82.md#1">违章工厂</a>至少断水断电200家跳票，<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a><ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E4%B8%AD%E9%83%A8%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">中部办公室</a>主任郭坤明说，依《工辅法》第28-1条立法说明，工业部门无法处分违章工厂拆除，断水、断电则依《工辅法》第30条、35条处理。<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>不满意郭坤明的解释，直呛依法行政就是要断水断电，这不是依法行政，而是依立法说明行政。</p>
-<p>陈椒华指出，经济部长王美花承诺<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E8%BF%9D%E7%AB%A0%E5%B7%A5%E5%8E%82.md#1">违章工厂</a>至少断水断电200家，行政院长苏贞昌也说要断水断电。但新增违章工厂已到2500家，最新资讯显示断水断电只有14家、拆除3家，连整体2,500家的1%都不到。依工辅法第28条，应该断水断电还要拆除，“这是我们的希望，也是政府该做的。”</p>
+<p>【大纪元2021年01月05日讯】（大纪元记者徐翠玲台湾台北报导）针对立委<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>与环团5日指出，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长王美花承诺<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9D%E7%AB%A0%E5%B7%A5%E5%8E%82.md#1">违章工厂</a>至少断水断电200家跳票，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E9%83%A8%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">中部办公室</a>主任郭坤明说，依《工辅法》第28-1条立法说明，工业部门无法处分违章工厂拆除，断水、断电则依《工辅法》第30条、35条处理。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>不满意郭坤明的解释，直呛依法行政就是要断水断电，这不是依法行政，而是依立法说明行政。</p>
+<p>陈椒华指出，经济部长王美花承诺<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9D%E7%AB%A0%E5%B7%A5%E5%8E%82.md#1">违章工厂</a>至少断水断电200家，行政院长苏贞昌也说要断水断电。但新增违章工厂已到2500家，最新资讯显示断水断电只有14家、拆除3家，连整体2,500家的1%都不到。依工辅法第28条，应该断水断电还要拆除，“这是我们的希望，也是政府该做的。”</p>
 <p>台湾水资源保育联盟主任粘丽玉质疑，违章工厂不断水断电，只叫它停工，是考虑里头有住人吗？违法工厂可以住人吗？是不是有关说问题？ 应该强制法断水断电，这才是立《工辅法》28-1条的意义。彰化一间一间违法工厂冒出来，台湾吃的镉米绝对会增加，如果再不赶快执行，会到监察院举发怠惰的官员。</p>
 <p>看守台湾协会秘书长谢和霖说，现行《工辅法》第28-1条的机制是针对新增的未登记工厂，除了勒令停工，也可以要求马上断水断电。结果经济部订定“未登记工厂停止供电供水作业程序”，把母法写的很清楚的“应即”断水断电的并行机制，变成先勒令停工，若不从再断水电串连机制，这是用行政规则扭曲母法，且依照行政规则，断水断电一、二周就可以做的事情，还要花60天，地方政府执行成果不佳，经济部要负最大的责任。</p>
 <p>郭坤明表示，大家的目标一样在遏止新增违章工厂，政府希望先建立机制，修法后让政府有机制去处理这些事情。经济部2020年依相关的污染风险，主动筛选700多家疑似农地新建违章工厂，直接交给地方政府查处，目前已查处317家，当中有100多家业者配合主动停工，10几家没有配合的业者则进行断水断电。</p>
@@ -20,48 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/19/10/22/n11603914.md#1">炒房对台湾好不好  黄国昌邀工商业大老对谈</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/19/10/29/n11619765.md#1">3大火吞14消防员 生命3权终过三读</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/2/14/n11869050.md#1">大雅恶火2勇消殉职案 工厂负责人遭起诉</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/2/26/n11897353.md#1">国土计划法修法破坏国土? 台立委要求撤案</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/3/18/n11949148.md#1">护良田拒工业 彰化青年反对在二林盖精机园区</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/5/8/n12093277.md#1">立院通过时力提案 确定农地工厂不纳纾困</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/6/10/n12175087.md#1">保护农地 竹市议员吁违章工厂辅导超前部署</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/8/10/n12319345.md#1">桃园庆祝农民节 看见桃园农业实力</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/10/6/n12457475.md#1">前瞻2300亿预算 环团吁用于因应气候变迁</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/11/13/n12546110.md#1">桃市积极办理违章工厂断水断电 展现执法决心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/22/n11603914.md#1">炒房对台湾好不好  黄国昌邀工商业大老对谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/29/n11619765.md#1">3大火吞14消防员 生命3权终过三读</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/14/n11869050.md#1">大雅恶火2勇消殉职案 工厂负责人遭起诉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/26/n11897353.md#1">国土计划法修法破坏国土? 台立委要求撤案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949148.md#1">护良田拒工业 彰化青年反对在二林盖精机园区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/8/n12093277.md#1">立院通过时力提案 确定农地工厂不纳纾困</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/10/n12175087.md#1">保护农地 竹市议员吁违章工厂辅导超前部署</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/10/n12319345.md#1">桃园庆祝农民节 看见桃园农业实力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/6/n12457475.md#1">前瞻2300亿预算 环团吁用于因应气候变迁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/13/n12546110.md#1">桃市积极办理违章工厂断水断电 展现执法决心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/4/n10615598.md#1" target="_blank">卞世传：江泽民篡改扬州抗日史的卑劣无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/2/n12662574.md#1">【直播】川普乔州助选 参议员决选进入冲刺</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/5/n12667076.md#1">【唐青看时事】军方入沈阳 赵乐际泄疫情</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12666084.md#1">【新闻大家谈】录音曝光 川普提诉乔州州务卿</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12662991.md#1">彭斯：欢迎参众议员6日提反对意见和呈交证据</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/1/n12659957.md#1">【时事军事】挑起“灰色战争” 中共闯下大祸</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12663410.md#1">研究：新型氟电池有望代替锂电池</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12664632.md#1">赵丽颖发文宣传新剧 意外暴露用“古董”手机</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12664153.md#1">玄彬和孙艺真恋情公开 江疏影的反应笑翻网络</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12666681.md#1">林青霞贺年图片藏玄机？网络疯传其豪门婚变</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12663471.md#1">台男星出道13年没红过 改名黄立今办婚宴</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12663493.md#1">日本吉卜力工作室 上千张动画图片免费下载</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/2/n12662244.md#1">庚子年最后1个月会发生什么？祖传中医推演</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665269.md#1">印度警察救起铁轨上的老人 再赏他耳光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ytrikp332/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ytrikp332/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/5/n12668307.htm">违章工厂断水断电承诺跳票 立委、官员激辩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/5/n12668307.htm">违章工厂断水断电承诺跳票 立委、官员激辩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ytrikp332/djy/blob/master/gb/21/1/5/n12668307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ytrikp332/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ytrikp332/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/5/n12668307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
